# carbon-agent

./: README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
carbon_tracker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
carbon_tracker/agents/: genai_agent.py
carbon_tracker/data/: shipment_data.csv  synthetic_data_generator.py
carbon_tracker/models/: anomaly_detection.py  emission_model.py
carbon_tracker/utils/: data_loader.py  feature_engineering.py  lane_analytics.py  optimization_engine.py
